--- a/css/style_tuanld.css
+++ b/css/style_tuanld.css
@@ -236,6 +236,10 @@ div.content_1 {
 div.content_1 p {
 	width:100%;
 	margin-bottom: 23px;
+        text-align:left;
+}
+div.content_tuanld p {
+        text-align:left;
 }
 div.content_tuanld {
 	width: 100%;
